# electrodynamics-simulator

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cxx
src/: Canvas.cxx  Canvas.hxx  Charge.cxx  Charge.hxx  Utils.cxx  Utils.hxx  canvas.cpp  canvas.hpp  charge.cpp  charge.hpp  constants.hpp  main.cpp  main.cxx  types.hpp  utils.cpp  utils.hpp  window.cpp  window.cxx  window.hpp  window.hxx
src/graphics/: arrow.cpp  arrow.hpp  base_line.cpp  base_line.hpp  canvas.cpp  canvas.hpp  chevron.cpp  chevron.hpp  circle.cpp  circle.hpp  context_guard.hpp  curve.cpp  curve.hpp  line.cpp  line.hpp  point.cpp  point.hpp  primitive.cpp  primitive.hpp  settings.cpp  settings.hpp  square.cpp  square.hpp  window.cpp  window.hpp
src/graphics/widgets/: charge_props.cpp  charge_props.hpp  command_line.cpp  command_line.hpp
src/physics/: charge.cpp  charge.hpp  charges.cpp  charges.hpp  field.cpp  field.hpp
